force-app/main/default/objects/Flow_Dependency__c/Flow_Dependency__c.object-meta.xml
<CustomObject>
    <label>Flow Dependency</label>
    <pluralLabel>Flow Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Dependency ID</label>
        <type>AutoNumber</type>
        <displayFormat>FD-{00000}</displayFormat>
    </nameField>
</CustomObject>