force-app/main/default/objects/Flow_Dependency__c/fields/Dependency_Depth__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Depth__c</fullName>
    <label>Dependency Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>