force-app/main/default/objects/Flow_Dependency__c/fields/Flow_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Api_Name__c</fullName>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>