force-app/main/default/objects/Flow_Dependency__c/fields/Is_Direct__c.field-meta.xml
<CustomField>
    <fullName>Is_Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Direct</label>
    <type>Checkbox</type>
</CustomField>