force-app/main/default/objects/Flow_Dependency__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>