force-app/main/default/objects/Flow_Dependency__c/fields/Source_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Component_Type__c</fullName>
    <label>Source Component Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>