force-app/main/default/objects/Flow_Dependency__c/fields/Target_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Component_Name__c</fullName>
    <label>Target Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>