force-app/main/default/objects/Flow_Dependency__c/fields/Target_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Component_Type__c</fullName>
    <label>Target Component Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>